--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 entries:
   apollo-portal:
   - apiVersion: v2
-    appVersion: 1.7.0-SNAPSHOT
-    created: "2020-07-26T15:42:12.506486+08:00"
+    appVersion: 1.7.0
+    created: "2020-08-01T20:26:39.623023+08:00"
     description: A Helm chart for Apollo Portal
-    digest: 24de3afa3e54d6247475d3b68b0bdfd694481291e814868ed2c5480ad5a1a88e
+    digest: b838e4478f0c031093691defeffb5805d51189989db0eb9caaa2dc67905c8391
     home: https://github.com/ctripcorp/apollo
     icon: https://raw.githubusercontent.com/ctripcorp/apollo/master/apollo-portal/src/main/resources/static/img/logo-simple.png
     maintainers:
@@ -19,10 +19,10 @@ entries:
     version: 0.1.0
   apollo-service:
   - apiVersion: v2
-    appVersion: 1.7.0-SNAPSHOT
-    created: "2020-07-26T15:42:12.507477+08:00"
+    appVersion: 1.7.0
+    created: "2020-08-01T20:26:39.623669+08:00"
     description: A Helm chart for Apollo Config Service and Apollo Admin Service
-    digest: d8d5039ecbd5cb787c1bd967319b99872a281a4149ff02bd94ceec73f155dec6
+    digest: 65c08f39b54ad1ac1d849cc841ce978bd6e95b0b6cbd2423d9f17f66bc7e8d3e
     home: https://github.com/ctripcorp/apollo
     icon: https://raw.githubusercontent.com/ctripcorp/apollo/master/apollo-portal/src/main/resources/static/img/logo-simple.png
     maintainers:
@@ -34,4 +34,4 @@ entries:
     urls:
     - apollo-service-0.1.0.tgz
     version: 0.1.0
-generated: "2020-07-26T15:42:12.502471+08:00"
+generated: "2020-08-01T20:26:39.621531+08:00"
